...
        app:tabTextColor="#9CA3AF">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabWaiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Waiting" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabAccepted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Accepted" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabNotSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not Selected" />
...
